--- a/index.html
+++ b/index.html
@@ -66,17 +66,18 @@
             <p class="hello">Hello I'm</p>
             <h1>Mathew John</h1>
             <p>Web Developer</p>
-            <div class="buttons">
-              <button class="button type1">
+            <div class="buttons ">
+              <button class="button type1 mb-3 mb-md-0 ">
                 <span class="btn-txt">Hire Me</span>
               </button>
-              <button class="button type1">
+              <button class="button type1  ">
                 <span class="btn-txt" id="contact">Contact</span>
               </button>
+                    </div>   
               <div class="icon">
                 <i class="fa-brands fa-linkedin"></i>
                 <i class="fa-brands fa-github"></i>
-              </div>   
+        
             </div>
           </div>
         </div>
@@ -118,7 +119,7 @@
             </div>
           </div>
           <div class="row">
-            <p class="para1"data-aos="fade-left"
+            <p class="para1 text-sm-center"data-aos="fade-up"
      data-aos-duration="2000"> Hi! This Is Mathew John I'm a Full-Stack Web Developer with a strong focus on the MERN
               stack .that’s MongoDB, Express.js, React.js, and Node.js. I build fast, responsive, and scalable web
               applications that are both functional and user-friendly.
@@ -147,7 +148,7 @@
 
       <div class="container">
         <div class="row " id="mainskill">
-          <div class="col-sm-12 col-md-5 co-lg-5 offset-md-1 offset-lg-1  border border-dark shadow-lg rounded-5"
+          <div class="col-sm-12 col-md-5 co-lg-5 offset-md-1 offset-lg-1 mb-3 mb-md-0  border border-dark shadow-lg rounded-5"
             id="Frontend"data-aos="fade-right"
      data-aos-duration="2000" >
             <h2>Frontend</h2>
