Fix in cart logic

--- a/index.html
+++ b/index.html
@@ -68,15 +68,17 @@
             <p>Web Developer</p>
             <div class="buttons ">
               <button class="button type1 mb-3 mb-md-0 ">
-                <span class="btn-txt">Hire Me</span>
+                <a class="btn-txt "  href="MathewResume.pdf" download>Download CV</a>
               </button>
               <button class="button type1  ">
-                <span class="btn-txt" id="contact">Contact</span>
+                <a class="btn-txt" id="#Contact">Contact</a>
               </button>
                     </div>   
               <div class="icon">
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-github"></i>
+                <a href="https://www.linkedin.com/in/mathew-john-jr/">  
+                  <i class="fa-brands fa-linkedin"></i></a>
+               <a href="https://github.com/MathewJR45"> <i class="fa-brands fa-github"></i></a>
+               
         
             </div>
           </div>
@@ -261,7 +263,8 @@
             <h5><i class="fa-solid fa-envelope"></i> mathewjohnmj45 @gmail.com</h5>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-3">
-            <h5><i class="fa-brands fa-linkedin"></i>linkedIn</h5>
+            <a href="https://www.linkedin.com/in/mathew-john-jr/"><h5><i class="fa-brands fa-linkedin"></i>linkedIn</h5></a>
+ 
           </div>
           <div class="col-sm-12 col-md-4 col-lg-3">
             <h5><i class="fa-solid fa-phone"></i>6382018637</h5>
