--- a/index.html
+++ b/index.html
@@ -285,10 +285,12 @@
       <div class="container d-flex justify-content-center">
         <div class="row border border-dark shadow-lg p-4 rounded-5 w-75 text-center">
           <div class="col-sm-12 col-md-4 col-lg-6">
-            <h5><i class="fa-solid fa-envelope"></i> mathewjohnmj45 @gmail.com</h5>
+            <a  href="https://mail.google.com/mail/?view=cm&fs=1&to=mathewjohnmj45@gmail.com" class="email-link">
+            <h5 ><i class="fa-solid fa-envelope"></i> mathewjohnmj45@gmail.com</h5>
+            </a>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-3">
-            <a href="https://www.linkedin.com/in/mathew-john-jr/">
+            <a href="https://www.linkedin.com/in/mathew-john-jr/" class="email-link">
               <h5><i class="fa-brands fa-linkedin"></i>linkedIn</h5>
             </a>
 
